# ratatoskr

./: CMakeLists.txt  README.md
ratatoskr/: CMakeLists.txt
ratatoskr/src/: alternativeparameters.h  commandlineparameters.h  dependentparameters.h  errors.h  interpretparameters.h  iterateovertuple.h  programdescriptions.h  ratatoskr.cpp  ratatoskr.h  tuplecontainer.h  wedgedependentparameters.h
ratatoskr/src/conversions/: asunique.h  conversions.h  convertedparameters.h  errors.h  expressions.h  generic.h  globalsymbols.h  liealgebras.h  matrix.h  metrics.h  pairs.h  symbols.h
ratatoskr/src/input/: exfromstring.h  pairfrom.h  splice.h
ratatoskr/src/output/: twocolumnoutput.h
ratatoskr/src/parameters/: alternativeparameters.h  commandlineparameters.h  dependentparameters.h  errors.h  parameters.h  programdescriptions.h  tuplecontainer.h  underlyingparameters.h
ratatoskr/src/programs/: convert.h  covariantderivative.h  curvature.h  examples.h  extderivatives.h  killing.h  liealgebras.h  spinors.h
test/: CMakeLists.txt  testcommandlineparameters.h
test/src/: test.h  testalternativeparameters.h  testcommandlineparameters.h  testdependentparameters.h  testgeneric.h  testglobalsymbols.h  testinterpretparameters.h  testmatrix.h  testpairs.h  testprogramdescriptions.h  testsymbols.h
