cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_compile_options(-g -O3 -Wctor-dtor-privacy -Wreorder -Wold-style-cast -Wsign-promo -Wchar-subscripts -Winit-self -Wmissing-braces -Wparentheses -Wreturn-type -Wswitch -Wtrigraphs -Wextra -Wno-sign-compare -Wno-narrowing -Wno-attributes)
set(SRC src/ratatoskr.cpp)
add_executable(ratatoskr ${SRC})

set(CONVERSIONS_HDR asunique.h conversions.h errors.h expressions.h generic.h liealgebras.h matrix.h metrics.h pairs.h symbols.h)
list(TRANSFORM CONVERSIONS_HDR PREPEND src/conversions/)
set(INPUT_HDR exfromstring.h pairfrom.h splice.h)
list(TRANSFORM INPUT_HDR PREPEND src/input/)
set(OUTPUT_HDR twocolumnoutput.h)
list(TRANSFORM OUTPUT_HDR PREPEND src/output/)
set(PARAMETERS_HDR alternativeparameters.h dependentparameters.h parameters.h tuplecontainer.h commandlineparameters.h errors.h programdescriptions.h underlyingparameters.h)
list(TRANSFORM PARAMETERS_HDR PREPEND src/parameters/)

install(FILES ${CONVERSIONS_HDR} DESTINATION include/ratatoskr/conversions)
install(FILES ${INPUT_HDR} DESTINATION include/ratatoskr/input)
install(FILES ${OUTPUT_HDR} DESTINATION include/ratatoskr/output)
install(FILES ${PARAMETERS_HDR} DESTINATION include/ratatoskr/parameters)
install(FILES src/ratatoskr.h DESTINATION include/ratatoskr)
